# freedom-kit

./: Makefile  RAILGUN_INTEGRATION.md  README.md  build-all.sh  index.html  package.json
.github/workflows/: build-binaries.yml
ghost-sidecar/: README.md  config.production.json  fix-symlinks.sh  index.js  package.json
ghost-sidecar/local/: .ghost-cli  config.development.json
ghost-sidecar/local/content/data/: ghost-local.db
ghost-sidecar/local/content/themes/: casper  source
ghost-sidecar/local/current/: package.json
ghost-sidecar/local/current/core/built/admin/assets/admin-x-settings/: index-CGFCkAXn.mjs  modals-DH5H9Tgk.mjs
ghost-sidecar/local/versions/6.3.1/: tsconfig.tsbuildinfo
ghost-sidecar/local/versions/6.3.1/core/built/admin/: index.html
ghost-sidecar/original/: .ghost-cli  config.production.json  current
ghost-sidecar/original/content/themes/: casper  source
ghost-sidecar/original/versions/6.3.1/components/: tryghost-i18n-6.3.1.tgz
ghost-sidecar/original/versions/6.3.1/content/data/: ghost-dev.db
ghost-sidecar/src/: compress.ts  decompress.ts  firewall.ts  index.ts  utils.ts
hpc-sidecar/: index.js  package.json
railgun-sidecar/: package.json
railgun-sidecar/src/: api.ts  db.ts  engine.ts  env.ts  index.ts  utils.ts  wallet.ts
src/: main.ts  railgun-wallet-setup.ts  tor-banner.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tor/: hidden_service.rs  mod.rs  proxy.rs  tor_client.rs
(+9 files in other folders)
